Mudança radical no visual do portifolio

--- a/index.html
+++ b/index.html
@@ -1,60 +1,135 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="/icons/favorite-4-64.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>Anderson R.</title>
-</head>
-<body>
-    <div class="menu1">
-        <div class="menu2">
-            <a href="#a1"><button>Principais Habilidades</button></a>
-            <a href="#a2"><button>Outras Habilidades</button></a>
+  </head>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+  </style>
+  <body>
+    <div class="main">
+      <div class="cabecalho">
+        <div class="butao">
+          <a href="#a1"><button>Hard skills</button></a>
+          <a href="#a2"><button>Soft skills</button></a>
         </div>
+        <div class="menuseta">
+          <div id="linha">
+            <p>⠀⠀⠀⠀⠀⠀⠀⠀⠀</p>
+          </div>
+          <div id="nome">
+            <h1>Anderson Reges da Silva</h1>
+          </div>
+        </div>
+      </div>
+      <div class="menu">
+        <div id="sobre">
+          <h2>Full-stack Web Development Student | Trybe</h2>
+          <p>
+            In 2012 it was the year that I became interested in technology and
+            it was in that same year that I had my first computer but it didn't
+            have internet, I started discovering its functionalities by messing
+            with it every day when I got home from school, 10 years later with a
+            small incentive from a friend I was amazed at how the programs and
+            websites work inside, today I am a full-stack web development
+            student, and in the future I intend not only to evolve but to work
+            in the area.
+          </p>
+        </div>
+        <div id="foto">
+          <img
+            src="\imagens-e-links\Reges-o-lindo.png"
+            alt="Minha foto"
+            id="foto"
+          />
+        </div>
+      </div>
     </div>
-    <h1>Anderson Reges da Silva</h1>
-    <img src="imagens e links/Reges-o-lindo.png" alt="Minha foto">
 
-    <div class="sobre">
-        <h2 id="cargo">Estudante de Desenvolvimento Web Full-stack | Trybe</h2>
-        
-        <p id="sobre2">Em 2012 foi o ano a qual fiquei interessado por tecnologia e foi nesse mesmo ano que eu tive meu primeiro computador so que ele não tinha internet, comecei a fuçar nele todo dia quando chegava da escola e basicamente aprendi a mexer so fuçando, 10 anos depois com um pequeno incentivo de um amigo eu fiquei maravilhado como funciona os programas e os sites por dentro, hoje sou um estudante de desenvolvimento web full-stack, e no futuro pretendo não so evoluir como trabalhar na área.
-        </p>
-    </div>
-        
-    <div class="container">
-
-        <div class="card">
-            <h3>📍Limoeiro do Norte, Ceará, Brasil</h3>
-        </div >
-        <div class="card">
-            <h3>📞 (88)9.93408548</h3>
+    <div class="contatos1">
+      <h2>Contact me</h2>
+      <div id="barra">⠀⠀⠀⠀⠀⠀⠀⠀⠀</div>
+      <div class="cards1">
+        <div id="card1">
+          <img src="/icons/map-5-64.png" alt="mapa" />
+          <h3>Limoeiro do Norte, Ceará, Brazil</h3>
         </div>
-        <div class="card">
-            <h3>✉️ andersonreges76@gmail.com</h3>
+        <div id="card2">
+          <img src="/icons/phone-64.png" alt="telefone" />
+          <h3>(88)9.93408548</h3>
         </div>
-        <div class="card">
-            <h3><a href="https://www.linkedin.com/in/anderson-reges-66386b221/" target="_blank" style="text-decoration: none">🔗 Linkedin</a></h3>
+        <div id="card3">
+          <img src="/icons/email-5-64.png" alt="e-mail" />
+          <h3 style="font-size: 16px">andersonreges76@gmail.com</h3>
         </div>
-        <div class="card">
-            <h3><a href="https://github.com/Anderson-Reges" target="_blank" style="text-decoration: none">🔗 Github</a></h3>
-        </div>
+      </div>
     </div>
 
-    <h2 id="a1">Habilidades que me orgulho:</h2>
-    <ul>
-        <li>Unix e Bash</li>
-        <li>HTML e CSS</li>
-        <li>JavaScript</li>
-        <li>⏳ Em andamento...</li>
-    </ul>
-    <h2 id="a2">Outras habilidades</h2>
-    <ul>
-        <li>Comprometimento</li>
-        <li>Trabalho em equipe</li>
-    </ul>
-    <a href="https://blog.betrybe.com/" target="_blank">Blog da Trybe</a> <!---oia ai-->
-</body>
+    <div class="contatos2">
+      <div class="cards2">
+        <div id="card4">
+          <img src="/icons/linkedin-3-64.png" alt="link" />
+          <h3>
+            <a
+              href="https://www.linkedin.com/in/anderson-reges-66386b221/"
+              target="_blank"
+              style="text-decoration: none"
+              ><button>Linkedin</button></a
+            >
+          </h3>
+        </div>
+        <div id="card5">
+          <img src="/icons/github-6-64.png" alt="link" />
+          <h3>
+            <a
+              href="https://github.com/Anderson-Reges"
+              target="_blank"
+              style="text-decoration: none"
+              ><button>Github</button></a
+            >
+          </h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="skills">
+      <div class="skills-card1" id="a1">
+        <h2>Hard Skills</h2>
+        <ul>
+          <li>Unix e Bash</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>⏳ In progress...</li>
+        </ul>
+      </div>
+      <div id="barra-skills">⠀⠀⠀⠀⠀⠀⠀⠀⠀</div>
+      <div class="skills-card2" id="a2">
+        <h2>Soft Skills</h2>
+        <ul>
+          <li>Commitment</li>
+          <li>Team work</li>
+        </ul>
+      </div>
+    </div>
+    <div class="fixado">
+      <div class="fixado-nome">
+        <p>Made by me :)</p>
+      </div>
+      <div class="fixado1">⠀⠀⠀⠀⠀⠀⠀⠀⠀</div>
+    </div>
+    <footer class="rodape">
+      <p>Anderson Reges | 2022</p>
+      <p>Made and constantly updated by me with the ❤️.</p>
+    </footer>
+  </body>
 </html>
