--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div id="card3">
           <img src="/icons/email-5-64.png" alt="e-mail" />
-          <h3 style="font-size: 16px">andersonreges76@gmail.com</h3>
+          <h3>andersonreges76@gmail.com</h3>
         </div>
       </div>
     </div>
