--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="/icons/favorite-4-64.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Anderson R.</title>
   </head>
   <style>
@@ -19,8 +19,46 @@
     <div class="main">
       <div class="cabecalho">
         <div class="butao">
-          <a href="#a1"><button>Hard skills</button></a>
-          <a href="#a2"><button>Soft skills</button></a>
+          <a
+            href="https://www.linkedin.com/in/anderson-reges-66386b221/"
+            target="_blank"
+            style="text-decoration: none"
+            ><button>
+              <img
+                src="/icons/linkedin-3-64.png"
+                alt="link"
+                width="30px"
+              /></button
+          ></a>
+          <a
+            href="https://github.com/Anderson-Reges"
+            target="_blank"
+            style="text-decoration: none"
+            ><button>
+              <img
+                src="/icons/github-6-64.png"
+                alt="link"
+                width="30px"
+              /></button
+          ></a>
+          <a href="mailto:andersonreges76@gmail.com"
+            ><button>
+              <img
+                src="/icons/email-5-64.png"
+                alt="e-mail"
+                width="30px"
+              /></button
+          ></a>
+          <a
+            href="https://api.whatsapp.com/send?1=pt_BR&phone=5588993408548"
+            target="_blank"
+            ><button>
+              <img
+                src="icons/whatsapp-64.png"
+                alt="icone-whatsapp"
+                width="30px"
+              /></button
+          ></a>
         </div>
         <div class="menuseta">
           <div id="linha">
@@ -33,99 +71,195 @@
       </div>
       <div class="menu">
         <div id="sobre">
-          <h2>Full-stack Web Development Student | Trybe</h2>
+          <h2>Desenvolvedor Web Front-End</h2>
           <p>
-            In 2012 it was the year that I became interested in technology and
-            it was in that same year that I had my first computer but it didn't
-            have internet, I started discovering its functionalities by messing
-            with it every day when I got home from school, 10 years later with a
-            small incentive from a friend I was amazed at how the programs and
-            websites work inside, today I am a full-stack web development
-            student, and in the future I intend not only to evolve but to work
-            in the area.
+            Em 2012 foi o ano a qual fiquei interessado por tecnologia e foi
+            nesse mesmo ano que eu tive meu primeiro computador so que ele não
+            tinha internet, comecei a fuçar nele todo dia quando chegava da
+            escola e basicamente aprendi a mexer so fuçando, 10 anos depois com
+            um pequeno incentivo de um amigo eu fiquei maravilhado como funciona
+            os programas e os sites por dentro, hoje sou um estudante de
+            desenvolvimento web full-stack, e no futuro pretendo não so evoluir
+            como trabalhar na área.
           </p>
         </div>
         <div id="foto">
+          <img src="\imagens-e-links\Perfil.png" alt="Minha foto" id="foto" />
+        </div>
+      </div>
+    </div>
+    <div class="menu2">
+      <section id="projects" class="grid">
+        <hr
+          style="
+            box-shadow: inset 0 0px 20px 0px red;
+            width: 41px;
+            height: 4px;
+            right: 136px;
+            position: relative;
+            border-radius: 0.25rem;
+          "
+        />
+        <h2>Projetos</h2>
+        <hr class="hrbottom" />
+        <details>
+          <summary>Project Lessons Learned</summary>
+          <p>
+            O objetivo desenvolver um site que contenha uma série de informações
+            sobre o que eu aprendi aqui na Trybe ao longo dos últimos três
+            blocos. O seu site deverá estar com elementos posicionados e
+            estilizados e, além disso, deverá conter semântica apropriada para
+            que seja acessível e melhor ranqueado.
+          </p>
+          <a href="https://github.com/tryber/sd-024-b-project-lessons-learned/tree/anderson-reges-lessons-learned" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+        <details>
+          <summary>Project Playground Functions</summary>
+          <p>
+            O objetivo desse projeto foi uma simulação de requisição da empresa
+            para criar algumas funções, no meu time de desenvolvimento, eu
+            fiquei responsável por implementar o código de funções que resolvem
+            problemas com respostas pré-determinadas. utilizando a lógica de
+            programação para ajudar na análise de cada problema e resposta
+            esperada, facilitando a implementação do código de cada uma das
+            funções.
+          </p>
+          <a href="https://github.com/tryber/sd-024-b-project-playground-functions/tree/Anderson-Reges-sd-024-b-project-playground-functions" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+        <details>
+          <summary>Project Pixels Art</summary>
+          <p>
+            Neste projeto o objetivo foi implementar um editor de arte com
+            pixels em que a pessoa usuária poderá escolher uma cor em uma paleta
+            de cores e poderá pintar o que quiser em um quadro branco
+          </p>
+          <p>- Como nessa Imagem:</p>
           <img
-            src="\imagens-e-links\Reges-o-lindo.png"
-            alt="Minha foto"
-            id="foto"
+            src="imagens-e-links/art-with-pixels.gif"
+            alt="gif do projeto"
+            width="300px"
           />
-        </div>
-      </div>
-    </div>
-
-    <div class="contatos1">
-      <h2>Contact me</h2>
-      <div id="barra">⠀⠀⠀⠀⠀⠀⠀⠀⠀</div>
-      <div class="cards1">
-        <div id="card1">
-          <img src="/icons/map-5-64.png" alt="mapa" />
-          <h3>Limoeiro do Norte, Ceará, Brazil</h3>
-        </div>
-        <div id="card2">
-          <img src="/icons/phone-64.png" alt="telefone" />
-          <h3>(88)9.93408548</h3>
-        </div>
-        <div id="card3">
-          <img src="/icons/email-5-64.png" alt="e-mail" />
-          <h3>andersonreges76@gmail.com</h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="contatos2">
-      <div class="cards2">
-        <div id="card4">
-          <img src="/icons/linkedin-3-64.png" alt="link" />
-          <h3>
-            <a
-              href="https://www.linkedin.com/in/anderson-reges-66386b221/"
-              target="_blank"
-              style="text-decoration: none"
-              ><button>Linkedin</button></a
-            >
-          </h3>
-        </div>
-        <div id="card5">
-          <img src="/icons/github-6-64.png" alt="link" />
-          <h3>
-            <a
-              href="https://github.com/Anderson-Reges"
-              target="_blank"
-              style="text-decoration: none"
-              ><button>Github</button></a
-            >
-          </h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="skills">
-      <div class="skills-card1" id="a1">
-        <h2>Hard Skills</h2>
+          <a href="https://github.com/tryber/sd-024-b-project-pixels-art/tree/Anderson-Reges-project-pixels-art" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+        <details>
+          <summary>Project Color Guess</summary>
+          <p>
+            O objetivo desse projeto foi desenvolver uma aplicação utilizando
+            JavaScript, HTML5 e CSS3.
+            <br />
+            <br />
+            Nesta aplicação é possível jogar um jogo de adivinhação de cores
+            onde:
+            <br />
+            <br />
+            -Dentro de uma possibilidade de cores o jogador deverá tentar
+            adivinhar qual cor foi aleatoriamente selecionada como a cor
+            certa;<br />
+            -A paleta de cores deve ser apresentada por círculos coloridos;<br />
+            -Deverá existir um botão para iniciar e reiniciar o jogo;<br />
+            -Ao selecionar uma cor um texto deverá informar se você acertou ou
+            não a cor correta.
+          </p>
+          <a href="https://github.com/tryber/sd-024-b-project-color-guess/tree/Anderson-Reges-project-color-guess" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+        <details>
+          <summary>Project Trybewarts</summary>
+          <p>
+            Neste projeto, o objetivo era desenvolver uma página de formulário
+            da Escola de Magia de Trybewarts, em que as pessoas estudantes
+            poderão enviar seus feedbacks sobre ela. O tema desse projeto é
+            baseado na obra 'Harry Potter', de J. K. Rowling
+          </p>
+          <a href="https://github.com/tryber/sd-024-b-project-trybewarts/tree/Anderson-Reges-trybewarts" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+        <details>
+          <summary>Project JS Unit Tests</summary>
+          <p>
+            O objetivo desse projeto foi implementar várias funções na resolução
+            dos requisitos propostos e testes unitários para garantir que as
+            implementações das funções estão corretas, de acordo com o que está
+            sendo solicitado em cada enunciado.
+            <br />
+            <br />
+            Nesse projeto eu fui capaz de:
+            <br />
+            <br />
+            - Escrever testes unitários utilizando o módulo Jest do NodeJS para
+            verificar o correto funcionamento das funções;<br />
+            - Escrever funções de forma que elas atendam a testes já
+            implementados;<br />
+            - Escrever testes e funções utilizando uma abordagem de
+            desenvolvimento orientado a testes.
+          </p>
+          <a href="https://github.com/tryber/sd-024-b-project-js-unit-tests/tree/Anderson-Reges-project-js-unit-tests" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+        <details>
+          <summary>Project Zoo Functions</summary>
+          <p>
+            O objetivo desse projeto foi uma simulação para testar os
+            conhecimento de <strong>ES6</strong>,
+            <strong>Higher Order Functions</strong> e testes, a qual prefeitura
+            da cidade te deu uma importante missão: organizar as informações do
+            zoológico!
+            <br />
+            <br />
+            Eu fiquei responsável por desenvolver funções que buscam informações
+            sobre os animais do zoológico como: espécie e local de origem. Além
+            disso, também teria buscar dados sobre as pessoas que colaboram com
+            a manutenção e cuidado do zoológico.
+          </p>
+          <a href="https://github.com/tryber/sd-024-b-project-zoo-functions/tree/Anderson-Reges-zoo-functions-project" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+        <details>
+          <summary>Project Shopping Cart</summary>
+          <p>
+            O objetivo desse projeto foi desenvolver carrinho de compras
+            totalmente dinâmico.
+            <br />
+            <br />
+            Para isso, iriamos consumir dados diretamente de uma API. <br />
+            nesse projeto foi utilizado a API do Mercado Livre para buscar
+            produtos à venda.
+          </p>
+          <a href="https://github.com/tryber/sd-024-b-project-shopping-cart/tree/Anderson-Reges-shopping-cart" target="_blank"><button id="button-rep">Repositorio do Projeto</button></a>
+        </details>
+      </section>
+      <!-- <ul class="grid">
+        <li class="small small1" style="background-image: url('imagens-e-links/mural_1b-small.png')"></li>
+        <li class="large" style="background-image: url('imagens-e-links/mural_2-large.png')"></li>
+        <li class="large" style="background-image: url('imagens-e-links/mural_3-large.png')"></li>
+        <li class="small" style="background-image: url('imagens-e-links/mural_4-small.png')"></li>
+      </ul> -->
+      <div class="grid">
+        <hr class="hrtop" />
+        <h2 style="text-align: center">Formação</h2>
+        <hr class="hrbottom" />
         <ul>
-          <li>Unix e Bash</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>⏳ In progress...</li>
+          <li>
+            TRYBE
+            <ul>
+              <li>Duração: 1 Ano - 2022/2023</li>
+              <li><button id="button-rep"><a href="https://github.com/Anderson-Reges/Trybe-exercicios" target="_blank">Repositorio dos Exercicios | Trybe</a></button></li>
+            </ul>
+          </li>
         </ul>
+        <p>O programa conta com mais de 1.500 horas de aulas presenciais e online, aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais.</p>
       </div>
-      <div id="barra-skills">⠀⠀⠀⠀⠀⠀⠀⠀⠀</div>
-      <div class="skills-card2" id="a2">
-        <h2>Soft Skills</h2>
+      <div class="grid">
+        <hr class="hrtop" />
+        <h2 style="text-align: center">Linguagens / frameworks</h2>
+        <hr class="hrbottom" />
         <ul>
-          <li>Commitment</li>
-          <li>Team work</li>
+          <li>HTML & CSS</li>
+          <li>JavaScript & React</li>
+          <li>NODE.js</li>
+          <li>Jest</li>
         </ul>
       </div>
     </div>
     <div class="fixado">
-      <div class="fixado-nome">
-        <p>Made by me :)</p>
-      </div>
-      <div class="fixado1">⠀⠀⠀⠀⠀⠀⠀⠀⠀</div>
+      <p class="fixado-nome">Made by me :)</p>
+      <hr class="fixado1" />
     </div>
     <footer class="rodape">
       <p>Anderson Reges | 2022</p>
